+x on scripts and environment file
Conflicts:

	README.md